Modify update-resume script

--- a/content/resume.html
+++ b/content/resume.html
@@ -111,7 +111,7 @@
   </style>
 </head>
 <body>
-<h1 id="jordan-crane">Jordan <strong>Crane</strong></h1>
+<h1 id="jordan-crane">Jordan Crane</h1>
 <blockquote>
 <p><a href="mailto:jordan@jordancrane.me">jordan@jordancrane.me</a> • (503) 333-0272 • <a href="https://www.linkedin.com/in/jordancrane/" target="_blank">LinkedIn</a> • <a href="https://github.com/jordancrane" target="_blank">Github</a></p>
 </blockquote>
