--- a/static/resume.html
+++ b/static/resume.html
@@ -113,7 +113,7 @@
 <body>
 <h1 id="jordan-crane">Jordan Crane</h1>
 <blockquote>
-<p><a href="mailto:jordan@jordancrane.me">jordan@jordancrane.me</a> • (503) 333-0272 • <a href="https://www.linkedin.com/in/jordancrane/" target="_blank">LinkedIn</a> • <a href="https://github.com/jordancrane" target="_blank">Github</a></p>
+<p><a href="mailto:jordan@jordancrane.me">jordan@jordancrane.me</a> • (503) 333-0272 • <a href="https://www.linkedin.com/in/jordancrane/" target="_blank">LinkedIn</a> • <a href="https://github.com/jordancrane" target="_blank">GitHub</a></p>
 </blockquote>
 <blockquote>
 <p><em>Portland, Oregon / Remote</em></p>
