--- a/static/resume/resume.html
+++ b/static/resume/resume.html
@@ -125,7 +125,7 @@
 <dd><p><strong>Senior Software Engineer for <a href="https://www.acorns.com/" target="_blank">Acorns</a></strong> • <em>Portland, Oregon</em></p>
 <ul>
 <li><p>Led a team of 2 other backend engineers in the design and implementation of Spend Recurring Deposits, a top-priority greenfield project now responsible for transactions totaling over $6 million a month</p></li>
-<li><p>Abstracted the process of scheduling and executing recurring transfers into a single serverless architecture capable of managing them for all product lines</p></li>
+<li><p>Abstracted the scheduling and execution of recurring transfers into a single serverless architecture capable of managing the process for all product lines</p></li>
 <li><p>Improved logging and visibility into a previously opaque monolith responsible for managing over 1 million IRA accounts; expanded its metrics dashboard from displaying just CPU and memory usage to exposing full metrics suites for GraphQL, 3rd party API performance, database performance, and batch job success rates</p></li>
 <li><p>Represented my team on a committee responsible for directing the development of CI/CD tooling</p></li>
 </ul>
