Update resume and deploy

--- a/static/resume/resume.html
+++ b/static/resume/resume.html
@@ -141,8 +141,8 @@
 <dt>6/17 - 5/18</dt>
 <dd><p><strong>Software Engineer for <a href="https://www.harmonicinc.com/" target="_blank">Harmonic</a></strong> • <em>Beaverton, Oregon</em></p>
 <ul>
-<li><p>Implemented a new visual verification tool using Simple DirectMedia Layer to allow engineers to quickly test the output of their encoder changes</p></li>
-<li><p>Ported the company’s existing MPEG2 decoder from assembly to C++11 in order to take advantage of compiler optimization and increase maintainablity</p></li>
+<li><p>Implemented a new testing tool using Simple DirectMedia Layer that enabled engineers to visually verify the output of their encoder changes</p></li>
+<li><p>Optimized color space conversion code in the HEVC encoder for a 2% overall CPU time reduction</p></li>
 </ul>
 </dd>
 </dl>
@@ -164,15 +164,16 @@
 <dt>Platforms</dt>
 <dd>Proficient in <strong>AWS</strong>, <strong>Datadog</strong>, <strong>CircleCI</strong>
 </dd>
-<dd><p>Basic knowledge of <strong>Jenkins</strong></p>
-</dd>
 </dl>
 <h2 id="education">Education</h2>
 <dl>
 <dt>2012 - 2017</dt>
-<dd><strong>BSc, Computer Engineering</strong> • Oregon State University • <em>Corvallis, Oregon</em>
+<dd><strong>B.Sc. Computer Engineering; Minor: Computer Science from</strong>
 </dd>
-<dd><p><em>Minor in Computer Science</em> • <em>Graduated Magna Cum Laude</em></p>
+<dd><p><strong><a href="https://oregonstate.edu" target="_blank">Oregon State University</a></strong> • <em>Corvallis, Oregon</em></p>
+<ul>
+<li>Graduated <em>magna cum laude</em> (3.79 / 4.0 GPA)</li>
+</ul>
 </dd>
 </dl>
 </body>
